# wheelchair_simulation

./: CMakeLists.txt  package.xml
launch/: wheelchair_shared_navigation.launch  wheelchair_shared_navigation_simcontrol.launch
params/: navigation.yaml  wheelchair.yaml
rviz/: wheelchair_model.rviz  wheelchair_navigation.rviz
worlds/: bochum.world
